add new item category

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,14 +20,16 @@ msg.error.server.note=Requested content cannot be displayed, reason:
 menu.home=home
 menu.general=general
 menu.general.catalogs=catalogs
-menu.general.catalogs.itemcategories=item categories
+menu.general.catalogs.itemcategory=item categories
+menu.general.catalogs.itemcategory.addNew=new category
 menu.about=about
 
 itemcategory.lbl.title=item categories
-itemCategories.lbl.id=identifier
-itemCategories.lbl.desc=category
-itemCategories.lbl.status=status
-itemCategories.lbl.status.REGISTERED=registered
-itemCategories.lbl.status.ACTIVE=active
-itemCategories.lbl.status.SUSPENDED=suspended
-itemCategories.lbl.status.DELETED=deleted
+itemcategory.lbl.caption=Fill in the form to add a new item category
+itemCategory.lbl.id=identifier
+itemCategory.lbl.desc=category
+itemCategory.lbl.status=status
+itemCategory.lbl.status.REGISTERED=registered
+itemCategory.lbl.status.ACTIVE=active
+itemCategory.lbl.status.SUSPENDED=suspended
+itemCategory.lbl.status.DELETED=deleted
