--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -28,15 +28,17 @@ msg.error.server.note=El contenido solicitado no se puede mostrar, motivo:
 menu.home=inicio
 menu.general=general
 menu.general.catalogs=cat\u00E1logos
-menu.general.catalogs.itemcategories=categor\u00EDas de art\u00EDculos
+menu.general.catalogs.itemcategory=categor\u00EDas de art\u00EDculos
+menu.general.catalogs.itemcategory.addNew=nueva categor\u00EDa
 menu.about=acerca de
 
 itemcategory.lbl.title=categor\u00EDas de art\u00EDculos
-itemCategories.lbl.id=identificador
-itemCategories.lbl.desc=categor\u00EDa
-itemCategories.lbl.status=estado
-itemCategories.lbl.status.REGISTERED=registrado
-itemCategories.lbl.status.ACTIVE=activo
-itemCategories.lbl.status.SUSPENDED=suspendido
-itemCategories.lbl.status.DELETED=borrado
+itemcategory.lbl.caption=Llene el formulario para agregar una nueva categor\u00EDa de art\u00EDculos
+itemCategory.lbl.id=identificador
+itemCategory.lbl.desc=categor\u00EDa
+itemCategory.lbl.status=estado
+itemCategory.lbl.status.REGISTERED=registrado
+itemCategory.lbl.status.ACTIVE=activo
+itemCategory.lbl.status.SUSPENDED=suspendido
+itemCategory.lbl.status.DELETED=borrado
 
