--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,6 +22,7 @@ menu.general=general
 menu.general.catalogs=catalogs
 menu.general.catalogs.itemcategory=item categories
 menu.general.catalogs.itemcategory.addNew=new category
+menu.general.catalogs.itemcategory.remove=delete category
 menu.about=about
 
 itemcategory.lbl.title=item categories
