--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -30,6 +30,7 @@ menu.general=general
 menu.general.catalogs=cat\u00E1logos
 menu.general.catalogs.itemcategory=categor\u00EDas de art\u00EDculos
 menu.general.catalogs.itemcategory.addNew=nueva categor\u00EDa
+menu.general.catalogs.itemcategory.remove=borrar categor\u00EDa
 menu.about=acerca de
 
 itemcategory.lbl.title=categor\u00EDas de art\u00EDculos
