--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,6 +13,16 @@ msg.loading=loading...
 
 btn.search=Search
 btn.add=Add
+btn.save=Save
+btn.reset=reset
+btn.return=return
+lbl.edit=edit
+lbl.first=first
+lbl.last=last
+lbl.status.REGISTERED=registered
+lbl.status.ACTIVE=active
+lbl.status.SUSPENDED=suspended
+lbl.status.DELETED=deleted
 
 msg.error.server.title=SERVER ERROR
 msg.error.server.note=Requested content cannot be displayed, reason:
@@ -22,15 +32,14 @@ menu.general=general
 menu.general.catalogs=catalogs
 menu.general.catalogs.itemcategory=item categories
 menu.general.catalogs.itemcategory.addNew=new category
-menu.general.catalogs.itemcategory.remove=delete category
+menu.general.catalogs.itemcategory.remove=edit category
 menu.about=about
 
 itemcategory.lbl.title=item categories
-itemcategory.lbl.caption=Fill in the form to add a new item category
+itemcategory.lbl.caption=Fill in the form to save this item category
 itemCategory.lbl.id=identifier
 itemCategory.lbl.desc=category
 itemCategory.lbl.status=status
-itemCategory.lbl.status.REGISTERED=registered
-itemCategory.lbl.status.ACTIVE=active
-itemCategory.lbl.status.SUSPENDED=suspended
-itemCategory.lbl.status.DELETED=deleted
+itemCategory.msg.addSuccess=category successfully added
+itemCategory.msg.updateSuccess=category successfully modified
+itemCategory.msg.notFount=cannot found requested category
