--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,11 +1,3 @@
-#\u00E1 a \u00C1 A
-#\u00E9 e \u00C9 E
-#\u00ED i \u00CD I
-#\u00F3 o \u00D3 O
-#\u00FA u \u00DA U \u00FC u \u00DC U  
-#\u00F1 n \u00D1 N
-#\u00A1 ! \u00BF ?
-
 login.lbl.fail=Nombre de usuario o password inv\u00E1lido
 login.lbl.logout=\u00A1Sesi\u00F3n cerrada, vuelva pronto!
 login.lbl.forgotPass=\u00BFOlvid\u00F3 su Contrase\u00F1a?
@@ -21,6 +13,16 @@ msg.loading=cargando...
 
 btn.search=Buscar
 btn.add=Agregar
+btn.save=Guardar
+btn.reset=deshacer
+btn.return=regresar
+lbl.edit=editar
+lbl.first=primero
+lbl.last=\u00FAltimo
+lbl.status.REGISTERED=registrado
+lbl.status.ACTIVE=activo
+lbl.status.SUSPENDED=suspendido
+lbl.status.DELETED=borrado
 
 msg.error.server.title=ERROR EN EL SERVIDOR
 msg.error.server.note=El contenido solicitado no se puede mostrar, motivo:
@@ -30,16 +32,22 @@ menu.general=general
 menu.general.catalogs=cat\u00E1logos
 menu.general.catalogs.itemcategory=categor\u00EDas de art\u00EDculos
 menu.general.catalogs.itemcategory.addNew=nueva categor\u00EDa
-menu.general.catalogs.itemcategory.remove=borrar categor\u00EDa
+menu.general.catalogs.itemcategory.edit=editar categor\u00EDa
 menu.about=acerca de
 
 itemcategory.lbl.title=categor\u00EDas de art\u00EDculos
-itemcategory.lbl.caption=Llene el formulario para agregar una nueva categor\u00EDa de art\u00EDculos
+itemcategory.lbl.caption=Llene el formulario para guardar esta categor\u00EDa de art\u00EDculos
 itemCategory.lbl.id=identificador
 itemCategory.lbl.desc=categor\u00EDa
 itemCategory.lbl.status=estado
-itemCategory.lbl.status.REGISTERED=registrado
-itemCategory.lbl.status.ACTIVE=activo
-itemCategory.lbl.status.SUSPENDED=suspendido
-itemCategory.lbl.status.DELETED=borrado
+itemCategory.msg.addSuccess=categor\u00EDa agregada correctamente
+itemCategory.msg.updateSuccess=categor\u00EDa modificada exitosamente
+itemCategory.msg.notFount=no se encontr\u00F3 la categor\u00EDa solicitada
 
+#\u00E1 a \u00C1 A
+#\u00E9 e \u00C9 E
+#\u00ED i \u00CD I
+#\u00F3 o \u00D3 O
+#\u00FA u \u00DA U \u00FC u \u00DC U  
+#\u00F1 n \u00D1 N
+#\u00A1 ! \u00BF ?
