catalogs list, redefine some fragments

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,22 +24,39 @@ lbl.status.ACTIVE=active
 lbl.status.SUSPENDED=suspended
 lbl.status.DELETED=deleted
 
-msg.error.server.title=SERVER ERROR
+msg.error.server.title=Server Message
 msg.error.server.note=Requested content cannot be displayed, reason:
+#for menus and breadcrumbs
+menu.home=Home
+menu.catalogs=Catalogs
+menu.catalogs.itemcategory=Item Categories
+menu.catalogs.itemcategory.addNew=New Category
+menu.catalogs.itemcategory.edit=Edit Category
+menu.catalogs.customerType=Customer Types
+menu.catalogs.customerType.addNew=New Customer Type
+menu.catalogs.customerType.edit=Edit Customer Type
+menu.catalogs.customerStatus=Customer Status
+menu.catalogs.customerStatus.addNew=New Customer Status
+menu.catalogs.customerStatus.edit=Edit Customer Status
+menu.catalogs.units=Units
+menu.catalogs.units.addNew=New Unit
+menu.catalogs.units.edit=Edit Unit
+menu.catalogs.orderWorkflow=Order Workflows
+menu.catalogs.orderWorkflow.addNew=New Order Workflow
+menu.catalogs.orderWorkflow.edit=Edit Order Workflow
+menu.catalogs.orderStatus=Order Status
+menu.catalogs.orderStatus.addNew=New Order Status
+menu.catalogs.orderStatus.edit=Edit Order Status
+menu.catalogs.orderType=Order Types
+menu.catalogs.orderType.addNew=New Order Type
+menu.catalogs.orderType.edit=Edit Order Type
+menu.about=About
 
-menu.home=home
-menu.general=general
-menu.general.catalogs=catalogs
-menu.general.catalogs.itemcategory=item categories
-menu.general.catalogs.itemcategory.addNew=new category
-menu.general.catalogs.itemcategory.remove=edit category
-menu.about=about
-
-itemcategory.lbl.title=item categories
+itemcategory.lbl.title=Item Categories
 itemcategory.lbl.caption=Fill in the form to save this item category
-itemCategory.lbl.id=identifier
-itemCategory.lbl.desc=category
-itemCategory.lbl.status=status
-itemCategory.msg.addSuccess=category successfully added
-itemCategory.msg.updateSuccess=category successfully modified
-itemCategory.msg.notFount=cannot found requested category
+itemCategory.lbl.id=Identifier
+itemCategory.lbl.desc=Category
+itemCategory.lbl.status=Status
+itemCategory.msg.addSuccess=Category successfully added
+itemCategory.msg.updateSuccess=Category successfully modified
+itemCategory.msg.notFount=Cannot found requested category
