--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -24,25 +24,42 @@ lbl.status.ACTIVE=activo
 lbl.status.SUSPENDED=suspendido
 lbl.status.DELETED=borrado
 
-msg.error.server.title=ERROR EN EL SERVIDOR
+msg.error.server.title=Mensaje del Servidor
 msg.error.server.note=El contenido solicitado no se puede mostrar, motivo:
 
-menu.home=inicio
-menu.general=general
-menu.general.catalogs=cat\u00E1logos
-menu.general.catalogs.itemcategory=categor\u00EDas de art\u00EDculos
-menu.general.catalogs.itemcategory.addNew=nueva categor\u00EDa
-menu.general.catalogs.itemcategory.edit=editar categor\u00EDa
-menu.about=acerca de
+menu.home=Inicio
+menu.catalogs=Cat\u00E1logos
+menu.catalogs.itemcategory=Categor\u00EDas de Art\u00EDculos
+menu.catalogs.itemcategory.addNew=Nueva Categor\u00EDa
+menu.catalogs.itemcategory.edit=Editar Categor\u00EDa
+menu.catalogs.customerType=Tipos de Cliente
+menu.catalogs.customerType.addNew=Nuevo Tipo de Cliente
+menu.catalogs.customerType.edit=Editar Tipo de Cliente
+menu.catalogs.customerStatus=Estados de Cliente
+menu.catalogs.customerStatus.addNew=Nuevo Estado de Cliente
+menu.catalogs.customerStatus.edit=Editar Estado de Cliente
+menu.catalogs.itemUnits=Unidades
+menu.catalogs.itemUnits.addNew=Nueva Unidad
+menu.catalogs.itemUnits.edit=Editar Unidad
+menu.catalogs.orderWorkflow=Flujos de \u00D3rdenes
+menu.catalogs.orderWorkflow.addNew=Nuevo Flujo de \u00D3rdenes
+menu.catalogs.orderWorkflow.edit=Editar Flujo de \u00D3rdenes
+menu.catalogs.orderStatus=Estados de Orden
+menu.catalogs.orderStatus.addNew=Nuevo Estado de Orden
+menu.catalogs.orderStatus.edit=Editar Estado de Orden
+menu.catalogs.orderType=Tipos de Orden
+menu.catalogs.orderType.addNew=Nuevo Tipo de Orden
+menu.catalogs.orderType.edit=Editar Tipo de Orden
+menu.about=Acerca de
 
-itemcategory.lbl.title=categor\u00EDas de art\u00EDculos
+itemcategory.lbl.title=Categor\u00EDas de Art\u00EDculos
 itemcategory.lbl.caption=Llene el formulario para guardar esta categor\u00EDa de art\u00EDculos
-itemCategory.lbl.id=identificador
-itemCategory.lbl.desc=categor\u00EDa
-itemCategory.lbl.status=estado
-itemCategory.msg.addSuccess=categor\u00EDa agregada correctamente
-itemCategory.msg.updateSuccess=categor\u00EDa modificada exitosamente
-itemCategory.msg.notFount=no se encontr\u00F3 la categor\u00EDa solicitada
+itemCategory.lbl.id=Identificador
+itemCategory.lbl.desc=Categor\u00EDa
+itemCategory.lbl.status=Estado
+itemCategory.msg.addSuccess=Categor\u00EDa agregada correctamente
+itemCategory.msg.updateSuccess=Categor\u00EDa modificada exitosamente
+itemCategory.msg.notFount=No se encontr\u00F3 la categor\u00EDa solicitada
 
 #\u00E1 a \u00C1 A
 #\u00E9 e \u00C9 E
