categories and units catalogs complete

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,6 +16,7 @@ btn.add=Add
 btn.save=Save
 btn.reset=Reset
 btn.return=Return
+btn.close=Close
 lbl.edit=Edit
 lbl.first=First
 lbl.last=Last
@@ -24,6 +25,11 @@ lbl.status.REGISTERED=Registered
 lbl.status.ACTIVE=Active
 lbl.status.SUSPENDED=Suspended
 lbl.status.DELETED=Deleted
+lbl.datatype.DATE=Date
+lbl.datatype.TEXT=Text
+lbl.datatype.INTEGER=Integer
+lbl.datatype.FLOAT=Float
+lbl.datatype.OTHER=Other
 
 msg.error.server.title=Server Message
 msg.error.server.note=Requested content cannot be displayed, reason:
@@ -33,15 +39,15 @@ menu.catalogs=Catalogs
 menu.catalogs.itemcategory=Item Categories
 menu.catalogs.itemcategory.addNew=New Category
 menu.catalogs.itemcategory.edit=Edit Category
+menu.catalogs.itemunit=Item Units
+menu.catalogs.itemunit.addNew=New Unit
+menu.catalogs.itemunit.edit=Edit Unit
 menu.catalogs.customerType=Customer Types
 menu.catalogs.customerType.addNew=New Customer Type
 menu.catalogs.customerType.edit=Edit Customer Type
 menu.catalogs.customerStatus=Customer Status
 menu.catalogs.customerStatus.addNew=New Customer Status
 menu.catalogs.customerStatus.edit=Edit Customer Status
-menu.catalogs.itemUnits=Units
-menu.catalogs.itemUnits.addNew=New Unit
-menu.catalogs.itemUnits.edit=Edit Unit
 menu.catalogs.orderWorkflow=Order Workflows
 menu.catalogs.orderWorkflow.addNew=New Order Workflow
 menu.catalogs.orderWorkflow.edit=Edit Order Workflow
@@ -55,9 +61,18 @@ menu.about=About
 
 itemcategory.lbl.title=Item Categories
 itemcategory.lbl.caption=Fill in the form to save this item category
-itemCategory.lbl.id=Identifier
-itemCategory.lbl.desc=Category
-itemCategory.lbl.status=Status
-itemCategory.msg.addSuccess=Category successfully added
-itemCategory.msg.updateSuccess=Category successfully modified
-itemCategory.msg.notFount=Cannot found requested category
+itemcategory.lbl.id=Identifier
+itemcategory.lbl.desc=Category
+itemcategory.lbl.status=Status
+itemcategory.msg.addSuccess=Category successfully added
+itemcategory.msg.updateSuccess=Category successfully modified
+itemcategory.msg.notFound=Cannot found requested category
+itemunit.lbl.title=Item Units
+itemunit.lbl.caption=Fill in the form to save this item unit
+itemunit.lbl.id=Identifier
+itemunit.lbl.name=Unit Name
+itemunit.lbl.desc=Description
+itemunit.lbl.datatype=Data Type
+itemunit.msg.addSuccess=Unit successfully added
+itemunit.msg.updateSuccess=Unit successfully modified
+itemunit.msg.notFound=Cannot found requested unit
