--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -16,6 +16,7 @@ btn.add=Agregar
 btn.save=Guardar
 btn.reset=Restaurar
 btn.return=Regresar
+btn.close=Cerrar
 lbl.edit=Editar
 lbl.first=Primero
 lbl.last=\u00DAltimo
@@ -24,6 +25,11 @@ lbl.status.REGISTERED=Registrado
 lbl.status.ACTIVE=Activo
 lbl.status.SUSPENDED=Suspendido
 lbl.status.DELETED=Borrado
+lbl.datatype.DATE=Fecha
+lbl.datatype.TEXT=Texto
+lbl.datatype.INTEGER=Entero
+lbl.datatype.FLOAT=Flotante
+lbl.datatype.OTHER=Otro
 
 msg.error.server.title=Mensaje del Servidor
 msg.error.server.note=El contenido solicitado no se puede mostrar, motivo:
@@ -33,15 +39,15 @@ menu.catalogs=Cat\u00E1logos
 menu.catalogs.itemcategory=Categor\u00EDas de Art\u00EDculos
 menu.catalogs.itemcategory.addNew=Nueva Categor\u00EDa
 menu.catalogs.itemcategory.edit=Editar Categor\u00EDa
+menu.catalogs.itemunit=Unidades
+menu.catalogs.itemunit.addNew=Nueva Unidad
+menu.catalogs.itemunit.edit=Editar Unidad
 menu.catalogs.customerType=Tipos de Cliente
 menu.catalogs.customerType.addNew=Nuevo Tipo de Cliente
 menu.catalogs.customerType.edit=Editar Tipo de Cliente
 menu.catalogs.customerStatus=Estados de Cliente
 menu.catalogs.customerStatus.addNew=Nuevo Estado de Cliente
 menu.catalogs.customerStatus.edit=Editar Estado de Cliente
-menu.catalogs.itemUnits=Unidades
-menu.catalogs.itemUnits.addNew=Nueva Unidad
-menu.catalogs.itemUnits.edit=Editar Unidad
 menu.catalogs.orderWorkflow=Flujos de \u00D3rdenes
 menu.catalogs.orderWorkflow.addNew=Nuevo Flujo de \u00D3rdenes
 menu.catalogs.orderWorkflow.edit=Editar Flujo de \u00D3rdenes
@@ -55,12 +61,21 @@ menu.about=Acerca de
 
 itemcategory.lbl.title=Categor\u00EDas de Art\u00EDculos
 itemcategory.lbl.caption=Llene el formulario para guardar esta categor\u00EDa de art\u00EDculos
-itemCategory.lbl.id=Identificador
-itemCategory.lbl.desc=Categor\u00EDa
-itemCategory.lbl.status=Estado
-itemCategory.msg.addSuccess=Categor\u00EDa agregada correctamente
-itemCategory.msg.updateSuccess=Categor\u00EDa modificada exitosamente
-itemCategory.msg.notFount=No se encontr\u00F3 la categor\u00EDa solicitada
+itemcategory.lbl.id=Identificador
+itemcategory.lbl.desc=Categor\u00EDa
+itemcategory.lbl.status=Estado
+itemcategory.msg.addSuccess=Categor\u00EDa agregada correctamente
+itemcategory.msg.updateSuccess=Categor\u00EDa modificada exitosamente
+itemcategory.msg.notFound=No se encontr\u00F3 la categor\u00EDa solicitada
+itemunit.lbl.title=Unidades
+itemunit.lbl.caption=Llene el formulario para guardar esta unidad
+itemunit.lbl.id=Identificador
+itemunit.lbl.name=Unidad
+itemunit.lbl.desc=Descripci\u00F3n
+itemunit.lbl.datatype=Tipo de Dato
+itemunit.msg.addSuccess=Unidad agregada correctamente
+itemunit.msg.updateSuccess=Unidad modificada exitosamente
+itemunit.msg.notFound=No se encontr\u00F3 la unidad solicitada
 
 #\u00E1 a \u00C1 A
 #\u00E9 e \u00C9 E
