order status complete, example of formatter and config cleanup

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -91,7 +91,6 @@ customerstatus.lbl.status=Status
 customerstatus.msg.addSuccess=Customer status successfully added
 customerstatus.msg.updateSuccess=Customer status successfully modified
 customerstatus.msg.notFound=Cannot find requested customer status
-
 orderworkflow.lbl.title=Order Workflows
 orderworkflow.lbl.caption=Fill in the form to save this order workflow
 orderworkflow.lbl.id=Identifier
@@ -99,3 +98,12 @@ orderworkflow.lbl.desc=Description
 orderworkflow.msg.addSuccess=Order workflow successfully added
 orderworkflow.msg.updateSuccess=Order workflow successfully modified
 orderworkflow.msg.notFound=Cannot find requested order workflow
+orderstatus.lbl.title=Order Statuses
+orderstatus.lbl.caption=Fill in the form to save this order status
+orderstatus.lbl.id=Identifier
+orderstatus.lbl.desc=Description
+orderstatus.lbl.status=Status
+orderstatus.lbl.workflow=Workflow
+orderstatus.msg.addSuccess=Order workflow successfully added
+orderstatus.msg.updateSuccess=Order workflow successfully modified
+orderstatus.msg.notFound=Cannot find requested order workflow
