--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -48,9 +48,9 @@ menu.catalogs.customerType.edit=Editar Tipo de Cliente
 menu.catalogs.customerStatus=Estados de Cliente
 menu.catalogs.customerStatus.addNew=Nuevo Estado de Cliente
 menu.catalogs.customerStatus.edit=Editar Estado de Cliente
-menu.catalogs.orderWorkflow=Flujos de \u00D3rdenes
-menu.catalogs.orderWorkflow.addNew=Nuevo Flujo de \u00D3rdenes
-menu.catalogs.orderWorkflow.edit=Editar Flujo de \u00D3rdenes
+menu.catalogs.orderWorkflow=Flujos de Trabajo
+menu.catalogs.orderWorkflow.addNew=Nuevo Flujo de Trabajo
+menu.catalogs.orderWorkflow.edit=Editar Flujo de Trabajo
 menu.catalogs.orderStatus=Estados de Orden
 menu.catalogs.orderStatus.addNew=Nuevo Estado de Orden
 menu.catalogs.orderStatus.edit=Editar Estado de Orden
@@ -91,7 +91,6 @@ customerstatus.lbl.status=Estado
 customerstatus.msg.addSuccess=Estado de cliente agregado correctamente
 customerstatus.msg.updateSuccess=Estado de cliente modificado exitosamente
 customerstatus.msg.notFound=No se encontr\u00F3 el estado de cliente solicitado
-
 orderworkflow.lbl.title=Flujos de Trabajo
 orderworkflow.lbl.caption=Llene el formulario para guardar este flujo de trabajo
 orderworkflow.lbl.id=Identificador
@@ -99,6 +98,16 @@ orderworkflow.lbl.desc=Descripci\u00F3n
 orderworkflow.msg.addSuccess=Flujo de trabajo agregado correctamente
 orderworkflow.msg.updateSuccess=Flujo de trabajo modificado exitosamente
 orderworkflow.msg.notFound=No se encontr\u00F3 el flujo de trabajo solicitado
+orderstatus.lbl.title=Estados de \u00D3rdenes
+orderstatus.lbl.caption=Llene el formulario para guardar este estado de orden
+orderstatus.lbl.id=Identificador
+orderstatus.lbl.desc=Descripci\u00F3n
+orderstatus.lbl.status=Estado
+orderstatus.lbl.workflow=Flujo de Trabajo
+orderstatus.msg.addSuccess=Estado agregado correctamente
+orderstatus.msg.updateSuccess=Estado modificado exitosamente
+orderstatus.msg.notFound=No se encontr\u00F3 el estado de orden solicitado
+
 #\u00E1 a \u00C1 A
 #\u00E9 e \u00C9 E
 #\u00ED i \u00CD I
