order type, incomplete item BR

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -104,6 +104,14 @@ orderstatus.lbl.id=Identifier
 orderstatus.lbl.desc=Description
 orderstatus.lbl.status=Status
 orderstatus.lbl.workflow=Workflow
-orderstatus.msg.addSuccess=Order workflow successfully added
-orderstatus.msg.updateSuccess=Order workflow successfully modified
-orderstatus.msg.notFound=Cannot find requested order workflow
+orderstatus.msg.addSuccess=Order status successfully added
+orderstatus.msg.updateSuccess=Order status successfully modified
+orderstatus.msg.notFound=Cannot find requested order status
+ordertype.lbl.title=Order Types
+ordertype.lbl.caption=Fill in the form to save this order type
+ordertype.lbl.id=Identifier
+ordertype.lbl.desc=Description
+ordertype.lbl.status=Status
+ordertype.msg.addSuccess=Order type successfully added
+ordertype.msg.updateSuccess=Order type successfully modified
+ordertype.msg.notFound=Cannot find requested order type
