--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -107,7 +107,14 @@ orderstatus.lbl.workflow=Flujo de Trabajo
 orderstatus.msg.addSuccess=Estado agregado correctamente
 orderstatus.msg.updateSuccess=Estado modificado exitosamente
 orderstatus.msg.notFound=No se encontr\u00F3 el estado de orden solicitado
-
+ordertype.lbl.title=Tipos de \u00D3rdenes
+ordertype.lbl.caption=Llene el formulario para guardar este tipo de orden
+ordertype.lbl.id=Identificador
+ordertype.lbl.desc=Descripci\u00F3n
+ordertype.lbl.status=Estado
+ordertype.msg.addSuccess=Tipo de orden agregado correctamente
+ordertype.msg.updateSuccess=Tipo de orden modificado exitosamente
+ordertype.msg.notFound=No se encontr\u00F3 el tipo de orden solicitado
 #\u00E1 a \u00C1 A
 #\u00E9 e \u00C9 E
 #\u00ED i \u00CD I
