first paged query

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,28 +9,25 @@ login.btn.login=Login
 login.btn.logout=Logout
 login.btn.recoverPass=Recover Password
 
-menu.home=home
-menu.general=general
-menu.general.catalogs=catalogs
-menu.general.catalogs.groups=groups
-menu.general.catalogs.lists=group's lists
-menu.config=configuration
-menu.about=about
-
 msg.loading=loading...
-
-group.lbl.title=group's management
-group.lbl.title.new=Add new group
-group.lbl.title.list=list of groups
-group.lbl.id=Id
-group.lbl.name=Group Name
 
 btn.search=Search
 btn.add=Add
 
-msg.error.server=SERVER ERROR
+msg.error.server.title=SERVER ERROR
 msg.error.server.note=Requested content cannot be displayed, reason:
-msg.error.notempty=Field cannot be empty
-msg.error.size=Too large
-msg.error.size2=Size must be betwen {min} and {max}
-javax.validation.constraints.Size.message=Length must be between {min} and {max}
+
+menu.home=home
+menu.general=general
+menu.general.catalogs=catalogs
+menu.general.catalogs.itemcategories=item categories
+menu.about=about
+
+itemcategory.lbl.title=item categories
+itemCategories.lbl.id=identifier
+itemCategories.lbl.desc=category
+itemCategories.lbl.status=status
+itemCategories.lbl.status.REGISTERED=registered
+itemCategories.lbl.status.ACTIVE=active
+itemCategories.lbl.status.SUSPENDED=suspended
+itemCategories.lbl.status.DELETED=deleted
