--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -17,24 +17,26 @@ login.btn.login=Iniciar Sesi\u00F3n
 login.btn.logout=Cerrar Sesi\u00F3n
 login.btn.recoverPass=Recuperar Contrase\u00F1a
 
-menu.home=inicio
-menu.general=general
-menu.general.catalogs=cat\u00E1logos
-menu.general.catalogs.groups=grupos
-menu.general.catalogs.lists=listas de grupo
-menu.config=configuraci\u00F3n
-menu.about=acerca de
-
 msg.loading=cargando...
-
-group.lbl.title=Administraci\u00F3n de grupos
-group.lbl.title.new=Agregar nuevo grupo
-group.lbl.title.list=Lista de grupos
-group.lbl.id=Id
-group.lbl.name=Nombre del Grupo
 
 btn.search=Buscar
 btn.add=Agregar
 
-msg.error.server=ERROR EN EL SERVIDOR
+msg.error.server.title=ERROR EN EL SERVIDOR
 msg.error.server.note=El contenido solicitado no se puede mostrar, motivo:
+
+menu.home=inicio
+menu.general=general
+menu.general.catalogs=cat\u00E1logos
+menu.general.catalogs.itemcategories=categor\u00EDas de art\u00EDculos
+menu.about=acerca de
+
+itemcategory.lbl.title=categor\u00EDas de art\u00EDculos
+itemCategories.lbl.id=identificador
+itemCategories.lbl.desc=categor\u00EDa
+itemCategories.lbl.status=estado
+itemCategories.lbl.status.REGISTERED=registrado
+itemCategories.lbl.status.ACTIVE=activo
+itemCategories.lbl.status.SUSPENDED=suspendido
+itemCategories.lbl.status.DELETED=borrado
+
