naive bean parser, while implementing domain  factory

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,15 +14,16 @@ msg.loading=loading...
 btn.search=Search
 btn.add=Add
 btn.save=Save
-btn.reset=reset
-btn.return=return
-lbl.edit=edit
-lbl.first=first
-lbl.last=last
-lbl.status.REGISTERED=registered
-lbl.status.ACTIVE=active
-lbl.status.SUSPENDED=suspended
-lbl.status.DELETED=deleted
+btn.reset=Reset
+btn.return=Return
+lbl.edit=Edit
+lbl.first=First
+lbl.last=Last
+lbl.back=Back
+lbl.status.REGISTERED=Registered
+lbl.status.ACTIVE=Active
+lbl.status.SUSPENDED=Suspended
+lbl.status.DELETED=Deleted
 
 msg.error.server.title=Server Message
 msg.error.server.note=Requested content cannot be displayed, reason:
@@ -38,9 +39,9 @@ menu.catalogs.customerType.edit=Edit Customer Type
 menu.catalogs.customerStatus=Customer Status
 menu.catalogs.customerStatus.addNew=New Customer Status
 menu.catalogs.customerStatus.edit=Edit Customer Status
-menu.catalogs.units=Units
-menu.catalogs.units.addNew=New Unit
-menu.catalogs.units.edit=Edit Unit
+menu.catalogs.itemUnits=Units
+menu.catalogs.itemUnits.addNew=New Unit
+menu.catalogs.itemUnits.edit=Edit Unit
 menu.catalogs.orderWorkflow=Order Workflows
 menu.catalogs.orderWorkflow.addNew=New Order Workflow
 menu.catalogs.orderWorkflow.edit=Edit Order Workflow
