--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -14,15 +14,16 @@ msg.loading=cargando...
 btn.search=Buscar
 btn.add=Agregar
 btn.save=Guardar
-btn.reset=deshacer
-btn.return=regresar
-lbl.edit=editar
-lbl.first=primero
-lbl.last=\u00FAltimo
-lbl.status.REGISTERED=registrado
-lbl.status.ACTIVE=activo
-lbl.status.SUSPENDED=suspendido
-lbl.status.DELETED=borrado
+btn.reset=Restaurar
+btn.return=Regresar
+lbl.edit=Editar
+lbl.first=Primero
+lbl.last=\u00DAltimo
+lbl.back=Regresar
+lbl.status.REGISTERED=Registrado
+lbl.status.ACTIVE=Activo
+lbl.status.SUSPENDED=Suspendido
+lbl.status.DELETED=Borrado
 
 msg.error.server.title=Mensaje del Servidor
 msg.error.server.note=El contenido solicitado no se puede mostrar, motivo:
