customer types catalog

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -66,7 +66,7 @@ itemcategory.lbl.desc=Category
 itemcategory.lbl.status=Status
 itemcategory.msg.addSuccess=Category successfully added
 itemcategory.msg.updateSuccess=Category successfully modified
-itemcategory.msg.notFound=Cannot found requested category
+itemcategory.msg.notFound=Cannot find requested category
 itemunit.lbl.title=Item Units
 itemunit.lbl.caption=Fill in the form to save this item unit
 itemunit.lbl.id=Identifier
@@ -75,4 +75,11 @@ itemunit.lbl.desc=Description
 itemunit.lbl.datatype=Data Type
 itemunit.msg.addSuccess=Unit successfully added
 itemunit.msg.updateSuccess=Unit successfully modified
-itemunit.msg.notFound=Cannot found requested unit
+itemunit.msg.notFound=Cannot find requested unit
+customertype.lbl.title=Customer Types
+customertype.lbl.caption=Fill in the form to save this customer type
+customertype.lbl.id=Identifier
+customertype.lbl.desc=Description
+customertype.msg.addSuccess=Customer type successfully added
+customertype.msg.updateSuccess=Customer type successfully modified
+customertype.msg.notFound=Cannot find requested customer type
