--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -76,6 +76,13 @@ itemunit.lbl.datatype=Tipo de Dato
 itemunit.msg.addSuccess=Unidad agregada correctamente
 itemunit.msg.updateSuccess=Unidad modificada exitosamente
 itemunit.msg.notFound=No se encontr\u00F3 la unidad solicitada
+customertype.lbl.title=Tipos de Cliente
+customertype.lbl.caption=Llene el formulario para guardar este tipo de cliente
+customertype.lbl.id=Identificador
+customertype.lbl.desc=Descripci\u00F3n
+customertype.msg.addSuccess=Tipo de cliente agregado correctamente
+customertype.msg.updateSuccess=Tipo de cliente modificado exitosamente
+customertype.msg.notFound=No se encontr\u00F3 el tipo de cliente solicitado
 
 #\u00E1 a \u00C1 A
 #\u00E9 e \u00C9 E
