order workflow status catalog, catalog services layer redefined

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -84,6 +84,13 @@ customertype.msg.addSuccess=Tipo de cliente agregado correctamente
 customertype.msg.updateSuccess=Tipo de cliente modificado exitosamente
 customertype.msg.notFound=No se encontr\u00F3 el tipo de cliente solicitado
 
+orderworkflow.lbl.title=Flujos de Trabajo
+orderworkflow.lbl.caption=Llene el formulario para guardar este flujo de trabajo
+orderworkflow.lbl.id=Identificador
+orderworkflow.lbl.desc=Descripci\u00F3n
+orderworkflow.msg.addSuccess=Flujo de trabajo agregado correctamente
+orderworkflow.msg.updateSuccess=Flujo de trabajo modificado exitosamente
+orderworkflow.msg.notFound=No se encontr\u00F3 el flujo de trabajo solicitado
 #\u00E1 a \u00C1 A
 #\u00E9 e \u00C9 E
 #\u00ED i \u00CD I
