--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -83,3 +83,11 @@ customertype.lbl.desc=Description
 customertype.msg.addSuccess=Customer type successfully added
 customertype.msg.updateSuccess=Customer type successfully modified
 customertype.msg.notFound=Cannot find requested customer type
+
+orderworkflow.lbl.title=Order Workflows
+orderworkflow.lbl.caption=Fill in the form to save this order workflow
+orderworkflow.lbl.id=Identifier
+orderworkflow.lbl.desc=Description
+orderworkflow.msg.addSuccess=Order workflow successfully added
+orderworkflow.msg.updateSuccess=Order workflow successfully modified
+orderworkflow.msg.notFound=Cannot find requested order workflow
