customer status catalog, fix in ids datatypes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -45,7 +45,7 @@ menu.catalogs.itemunit.edit=Edit Unit
 menu.catalogs.customerType=Customer Types
 menu.catalogs.customerType.addNew=New Customer Type
 menu.catalogs.customerType.edit=Edit Customer Type
-menu.catalogs.customerStatus=Customer Status
+menu.catalogs.customerStatus=Customer Statuses
 menu.catalogs.customerStatus.addNew=New Customer Status
 menu.catalogs.customerStatus.edit=Edit Customer Status
 menu.catalogs.orderWorkflow=Order Workflows
@@ -83,6 +83,14 @@ customertype.lbl.desc=Description
 customertype.msg.addSuccess=Customer type successfully added
 customertype.msg.updateSuccess=Customer type successfully modified
 customertype.msg.notFound=Cannot find requested customer type
+customerstatus.lbl.title=Customer Statuses
+customerstatus.lbl.caption=Fill in the form to save this customer status
+customerstatus.lbl.id=Identifier
+customerstatus.lbl.desc=Description
+customerstatus.lbl.status=Status
+customerstatus.msg.addSuccess=Customer status successfully added
+customerstatus.msg.updateSuccess=Customer status successfully modified
+customerstatus.msg.notFound=Cannot find requested customer status
 
 orderworkflow.lbl.title=Order Workflows
 orderworkflow.lbl.caption=Fill in the form to save this order workflow
