--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -83,6 +83,14 @@ customertype.lbl.desc=Descripci\u00F3n
 customertype.msg.addSuccess=Tipo de cliente agregado correctamente
 customertype.msg.updateSuccess=Tipo de cliente modificado exitosamente
 customertype.msg.notFound=No se encontr\u00F3 el tipo de cliente solicitado
+customerstatus.lbl.title=Estados de Cliente
+customerstatus.lbl.caption=Llene el formulario para guardar este estado de cliente
+customerstatus.lbl.id=Identificador
+customerstatus.lbl.desc=Descripci\u00F3n
+customerstatus.lbl.status=Estado
+customerstatus.msg.addSuccess=Estado de cliente agregado correctamente
+customerstatus.msg.updateSuccess=Estado de cliente modificado exitosamente
+customerstatus.msg.notFound=No se encontr\u00F3 el estado de cliente solicitado
 
 orderworkflow.lbl.title=Flujos de Trabajo
 orderworkflow.lbl.caption=Llene el formulario para guardar este flujo de trabajo
