list items, fix query for units

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -58,6 +58,9 @@ menu.catalogs.orderType=Order Types
 menu.catalogs.orderType.addNew=New Order Type
 menu.catalogs.orderType.edit=Edit Order Type
 menu.about=About
+menu.inventory=Inventory
+menu.inv.item=Items
+menu.inv.inventory=Inventory
 
 itemcategory.lbl.title=Item Categories
 itemcategory.lbl.caption=Fill in the form to save this item category
@@ -115,3 +118,13 @@ ordertype.lbl.status=Status
 ordertype.msg.addSuccess=Order type successfully added
 ordertype.msg.updateSuccess=Order type successfully modified
 ordertype.msg.notFound=Cannot find requested order type
+
+item.lbl.title=Item Management
+item.btn.addNew=Add New Item
+item.msg.addSuccess=Item successfully added
+item.msg.updateSuccess=Item successfully modified
+item.msg.notFound=Cannot find requested item
+item.lbl.id=Identifier
+item.lbl.name=Item Name
+item.lbl.desc=Description
+item.lbl.rating=Rating
