--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -58,6 +58,9 @@ menu.catalogs.orderType=Tipos de Orden
 menu.catalogs.orderType.addNew=Nuevo Tipo de Orden
 menu.catalogs.orderType.edit=Editar Tipo de Orden
 menu.about=Acerca de
+menu.inventory=Inventario
+menu.inv.item=Art\u00EDculos
+menu.inv.inventory=Inventario
 
 itemcategory.lbl.title=Categor\u00EDas de Art\u00EDculos
 itemcategory.lbl.caption=Llene el formulario para guardar esta categor\u00EDa de art\u00EDculos
@@ -115,6 +118,16 @@ ordertype.lbl.status=Estado
 ordertype.msg.addSuccess=Tipo de orden agregado correctamente
 ordertype.msg.updateSuccess=Tipo de orden modificado exitosamente
 ordertype.msg.notFound=No se encontr\u00F3 el tipo de orden solicitado
+
+item.lbl.title=Administraci\au00F3n de Art\u00EDculos
+item.btn.addNew=Agregar Nuevo Art\u00EDculo
+item.msg.addSuccess=Art\u00EDculo agregado correctamente
+item.msg.updateSuccess=Art\u00EDculo modificado exitosamente
+item.msg.notFound=No se encontr\u00F3 el Art\u00EDculo solicitado
+item.lbl.id=Identificador
+item.lbl.name=Nombre del Art\u00EDculo
+item.lbl.desc=Descripci\u00F3n
+item.lbl.rating=Valoraci\u00F3n
 #\u00E1 a \u00C1 A
 #\u00E9 e \u00C9 E
 #\u00ED i \u00CD I
