simple item adding, 2 new formatters, missing @autowired annotation, changes in model

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -60,6 +60,8 @@ menu.catalogs.orderType.edit=Edit Order Type
 menu.about=About
 menu.inventory=Inventory
 menu.inv.item=Items
+menu.inv.item.addNew=New Item
+menu.inv.item.edit=Edit Item
 menu.inv.inventory=Inventory
 
 itemcategory.lbl.title=Item Categories
@@ -120,6 +122,7 @@ ordertype.msg.updateSuccess=Order type successfully modified
 ordertype.msg.notFound=Cannot find requested order type
 
 item.lbl.title=Item Management
+item.lbl.caption=Fill in the form to save this item
 item.btn.addNew=Add New Item
 item.msg.addSuccess=Item successfully added
 item.msg.updateSuccess=Item successfully modified
@@ -127,4 +130,5 @@ item.msg.notFound=Cannot find requested item
 item.lbl.id=Identifier
 item.lbl.name=Item Name
 item.lbl.desc=Description
+item.lbl.provider=Provider
 item.lbl.rating=Rating
