for images requests

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -121,7 +121,7 @@ ordertype.msg.addSuccess=Tipo de orden agregado correctamente
 ordertype.msg.updateSuccess=Tipo de orden modificado exitosamente
 ordertype.msg.notFound=No se encontr\u00F3 el tipo de orden solicitado
 
-item.lbl.title=Administraci\au00F3n de Art\u00EDculos
+item.lbl.title=Administraci\u00F3n de Art\u00EDculos
 item.lbl.caption=Llene el formulario para guardar este art\u00EDculo
 item.btn.addNew=Agregar Nuevo Art\u00EDculo
 item.msg.addSuccess=Art\u00EDculo agregado correctamente
