image controller and snapshots, dirty version

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -132,6 +132,7 @@ item.lbl.name=Nombre del Art\u00EDculo
 item.lbl.desc=Descripci\u00F3n
 item.lbl.provider=Proveedor
 item.lbl.rating=Valoraci\u00F3n
+item.lbl.image=Imagen
 #\u00E1 a \u00C1 A
 #\u00E9 e \u00C9 E
 #\u00ED i \u00CD I
