--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -63,6 +63,11 @@ menu.inv.item=Items
 menu.inv.item.addNew=New Item
 menu.inv.item.edit=Edit Item
 menu.inv.inventory=Inventory
+menu.customers=Customers
+menu.cus.management=Management
+menu.cus.management.addNew=New Customer
+menu.cus.management.edit=Edit Customer
+menu.cus.history=History
 
 itemcategory.lbl.title=Item Categories
 itemcategory.lbl.caption=Fill in the form to save this item category
@@ -84,7 +89,7 @@ itemunit.msg.notFound=Cannot find requested unit
 customertype.lbl.title=Customer Types
 customertype.lbl.caption=Fill in the form to save this customer type
 customertype.lbl.id=Identifier
-customertype.lbl.desc=Description
+customertype.lbl.desc=Customer Type
 customertype.msg.addSuccess=Customer type successfully added
 customertype.msg.updateSuccess=Customer type successfully modified
 customertype.msg.notFound=Cannot find requested customer type
@@ -133,3 +138,15 @@ item.lbl.desc=Description
 item.lbl.provider=Provider
 item.lbl.rating=Rating
 item.lbl.image=Image
+item.lbl.detail=Item Detail
+
+customer.lbl.title=Customer Management
+customer.lbl.caption=Fill in the form to save this customer
+customer.btn.addNew=New Customer
+customer.msg.addSuccess=Customer successfully added
+customer.msg.updateSuccess=Customer successfully modified
+customer.msg.notFound=Cannot find requested customer
+customer.lbl.id=Identifier
+customer.lbl.name=Name
+customer.lbl.code=Code
+customer.lbl.desc=Description
