--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -63,6 +63,11 @@ menu.inv.item=Art\u00EDculos
 menu.inv.item.addNew=Nuevo Art\u00EDculo
 menu.inv.item.edit=Editar Art\u00EDculo
 menu.inv.inventory=Inventario
+menu.customers=Clientes
+menu.cus.management=Administraci\u00F3n
+menu.cus.management.addNew=Nuevo Cliente
+menu.cus.management.edit=Editar Cliente
+menu.cus.history=Historial
 
 itemcategory.lbl.title=Categor\u00EDas de Art\u00EDculos
 itemcategory.lbl.caption=Llene el formulario para guardar esta categor\u00EDa de art\u00EDculos
@@ -84,7 +89,7 @@ itemunit.msg.notFound=No se encontr\u00F3 la unidad solicitada
 customertype.lbl.title=Tipos de Cliente
 customertype.lbl.caption=Llene el formulario para guardar este tipo de cliente
 customertype.lbl.id=Identificador
-customertype.lbl.desc=Descripci\u00F3n
+customertype.lbl.desc=Tipo de Cliente
 customertype.msg.addSuccess=Tipo de cliente agregado correctamente
 customertype.msg.updateSuccess=Tipo de cliente modificado exitosamente
 customertype.msg.notFound=No se encontr\u00F3 el tipo de cliente solicitado
@@ -133,6 +138,19 @@ item.lbl.desc=Descripci\u00F3n
 item.lbl.provider=Proveedor
 item.lbl.rating=Valoraci\u00F3n
 item.lbl.image=Imagen
+item.lbl.detail=Detalle de Art\u00EDculo
+
+customer.lbl.title=Administraci\u00F3n de Clientes
+customer.lbl.caption=Llene el formulario para guardar este cliente
+customer.btn.addNew=Nuevo Cliente
+customer.msg.addSuccess=Cliente agregado correctamente
+customer.msg.updateSuccess=Cliente modificado exitosamente
+customer.msg.notFound=No se encontr\u00F3 el Cliente solicitado
+customer.lbl.id=Identificador
+customer.lbl.name=Nombre
+customer.lbl.code=C\u00F3digo
+customer.lbl.desc=Descripci\u00F3n
+
 #\u00E1 a \u00C1 A
 #\u00E9 e \u00C9 E
 #\u00ED i \u00CD I
